Created webpage w/ HW requirements

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,57 @@
 
 </head>
 <body>
-My name is: {{ name }}
+<div id="main_menu">
+    <h1><span class="purple CenturyGothic">Talaar's Homepage</span></h1>
+</div>
+<div id="main_content">
+    <p>
+        <span class="blue biggerText CenturyGothic"><b>L</b></span>orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Elit ut aliquam purus sit. Convallis a cras semper auctor neque vitae tempus quam pellentesque. Suspendisse
+    interdum consectetur libero id faucibus. Eu scelerisque felis imperdiet proin fermentum. Enim ut tellus elementum
+    sagittis vitae et. Felis imperdiet proin fermentum leo vel orci porta non. Eu feugiat pretium nibh ipsum consequat
+    nisl vel. Enim praesent elementum facilisis leo vel fringilla est ullamcorper. Mauris a diam maecenas sed enim ut
+    sem viverra. Convallis tellus id interdum velit. Blandit turpis cursus in hac habitasse platea dictumst quisque
+    sagittis. Suspendisse faucibus interdum posuere lorem ipsum. Tellus at urna condimentum mattis pellentesque id.
+    Ultrices gravida dictum fusce ut. Lectus magna fringilla urna porttitor rhoncus dolor purus. Suspendisse sed nisi
+    lacus sed viverra tellus in. Scelerisque purus semper eget duis at tellus at urna.
+    </p>
+    <p>
+        <span class="blue biggerText CenturyGothic"><b>V</b></span>estibulum morbi blandit cursus risus at ultrices mi tempus. Enim ut sem viverra aliquet eget sit amet tellus cras.
+    Tortor id aliquet lectus proin. Ac auctor augue mauris augue neque. In dictum non consectetur a erat. Ornare lectus
+    sit amet est placerat in egestas. Non sodales neque sodales ut etiam. Nec dui nunc mattis enim ut tellus. Arcu odio
+    ut sem nulla. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Etiam non quam lacus suspendisse
+    faucibus interdum posuere. Convallis a cras semper auctor neque. In nibh mauris cursus mattis molestie a. Sodales ut
+    eu sem integer vitae justo eget magna. Mi sit amet mauris commodo quis imperdiet. Ultricies lacus sed turpis
+    tincidunt. Vitae nunc sed velit dignissim sodales ut eu. Ut ornare lectus sit amet est. Vel pretium lectus quam id
+    leo in.
+    </p>
+    <p>
+        <span class="blue biggerText CenturyGothic"><b>E</b></span>st velit egestas dui id. Faucibus turpis in eu mi bibendum neque egestas congue. Amet facilisis magna etiam tempor
+    orci eu. Quisque id diam vel quam elementum. Ornare quam viverra orci sagittis. Tellus molestie nunc non blandit
+    massa enim nec dui. A diam maecenas sed enim ut. Netus et malesuada fames ac. Eget est lorem ipsum dolor sit.
+    Tincidunt dui ut ornare lectus sit amet. Magna fringilla urna porttitor rhoncus. Morbi tempus iaculis urna id
+    volutpat lacus laoreet non curabitur. Cras adipiscing enim eu turpis egestas pretium aenean pharetra magna. Egestas
+    erat imperdiet sed euismod nisi. Ullamcorper morbi tincidunt ornare massa eget egestas. Ut eu sem integer vitae
+    justo eget magna fermentum. Vitae purus faucibus ornare suspendisse. Tortor dignissim convallis aenean et. Risus in
+    hendrerit gravida rutrum.
+    </p>
+    <p>
+        <span class="blue biggerText CenturyGothic"><b>V</b></span>itae aliquet nec ullamcorper sit amet. Pretium lectus quam id leo in vitae turpis massa. Leo in vitae turpis massa.
+    Turpis cursus in hac habitasse platea. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Nec dui nunc
+    mattis enim ut tellus. Odio tempor orci dapibus ultrices in iaculis. Purus viverra accumsan in nisl nisi scelerisque
+    eu ultrices vitae. Faucibus interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Porttitor massa id
+    neque aliquam vestibulum morbi. Consequat nisl vel pretium lectus quam id leo in.
+    </p>
+    <p>
+        <span class="blue biggerText CenturyGothic"><b>S</b></span>it amet nulla facilisi morbi tempus. Turpis massa sed elementum tempus egestas. Pretium lectus quam id leo in vitae
+    turpis massa sed. Sit amet consectetur adipiscing elit. Amet facilisis magna etiam tempor orci eu lobortis
+    elementum. Ut faucibus pulvinar elementum integer enim. Consectetur lorem donec massa sapien. Magna eget est lorem
+    ipsum dolor sit. Vel eros donec ac odio tempor orci dapibus ultrices. Arcu felis bibendum ut tristique et egestas
+    quis ipsum. Morbi enim nunc faucibus a pellentesque sit amet porttitor eget. Turpis massa sed elementum tempus
+    egestas sed sed risus. Tortor consequat id porta nibh venenatis. Nibh nisl condimentum id venenatis a condimentum.
+    </p>
+</div>
+
 </body>
 </html>
