--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,19 @@
 body {
     font-family: Helvetica, "Helvetica Neue", sans-serif;
 }
+
+.purple {
+    color: mediumpurple;
+}
+
+.blue {
+    color: deepskyblue;
+}
+
+.biggerText {
+    font-size: 120%;
+}
+
+.CenturyGothic {
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+}
