--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,66 +3,112 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     {% block head %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-        <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 
         <title>{% block title %}{% endblock %}This is {{ name }} Website</title>
     {% endblock %}
 
 </head>
 <body>
-<div id="main_menu">
-    <h1><span class="purple CenturyGothic">Talaar's Homepage</span></h1>
-</div>
-<div id="main_content">
-    <p>
-        <span class="blue biggerText CenturyGothic"><b>L</b></span>orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Elit ut aliquam purus sit. Convallis a cras semper auctor neque vitae tempus quam pellentesque. Suspendisse
-    interdum consectetur libero id faucibus. Eu scelerisque felis imperdiet proin fermentum. Enim ut tellus elementum
-    sagittis vitae et. Felis imperdiet proin fermentum leo vel orci porta non. Eu feugiat pretium nibh ipsum consequat
-    nisl vel. Enim praesent elementum facilisis leo vel fringilla est ullamcorper. Mauris a diam maecenas sed enim ut
-    sem viverra. Convallis tellus id interdum velit. Blandit turpis cursus in hac habitasse platea dictumst quisque
-    sagittis. Suspendisse faucibus interdum posuere lorem ipsum. Tellus at urna condimentum mattis pellentesque id.
-    Ultrices gravida dictum fusce ut. Lectus magna fringilla urna porttitor rhoncus dolor purus. Suspendisse sed nisi
-    lacus sed viverra tellus in. Scelerisque purus semper eget duis at tellus at urna.
-    </p>
-    <p>
-        <span class="blue biggerText CenturyGothic"><b>V</b></span>estibulum morbi blandit cursus risus at ultrices mi tempus. Enim ut sem viverra aliquet eget sit amet tellus cras.
-    Tortor id aliquet lectus proin. Ac auctor augue mauris augue neque. In dictum non consectetur a erat. Ornare lectus
-    sit amet est placerat in egestas. Non sodales neque sodales ut etiam. Nec dui nunc mattis enim ut tellus. Arcu odio
-    ut sem nulla. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Etiam non quam lacus suspendisse
-    faucibus interdum posuere. Convallis a cras semper auctor neque. In nibh mauris cursus mattis molestie a. Sodales ut
-    eu sem integer vitae justo eget magna. Mi sit amet mauris commodo quis imperdiet. Ultricies lacus sed turpis
-    tincidunt. Vitae nunc sed velit dignissim sodales ut eu. Ut ornare lectus sit amet est. Vel pretium lectus quam id
-    leo in.
-    </p>
-    <p>
-        <span class="blue biggerText CenturyGothic"><b>E</b></span>st velit egestas dui id. Faucibus turpis in eu mi bibendum neque egestas congue. Amet facilisis magna etiam tempor
-    orci eu. Quisque id diam vel quam elementum. Ornare quam viverra orci sagittis. Tellus molestie nunc non blandit
-    massa enim nec dui. A diam maecenas sed enim ut. Netus et malesuada fames ac. Eget est lorem ipsum dolor sit.
-    Tincidunt dui ut ornare lectus sit amet. Magna fringilla urna porttitor rhoncus. Morbi tempus iaculis urna id
-    volutpat lacus laoreet non curabitur. Cras adipiscing enim eu turpis egestas pretium aenean pharetra magna. Egestas
-    erat imperdiet sed euismod nisi. Ullamcorper morbi tincidunt ornare massa eget egestas. Ut eu sem integer vitae
-    justo eget magna fermentum. Vitae purus faucibus ornare suspendisse. Tortor dignissim convallis aenean et. Risus in
-    hendrerit gravida rutrum.
-    </p>
-    <p>
-        <span class="blue biggerText CenturyGothic"><b>V</b></span>itae aliquet nec ullamcorper sit amet. Pretium lectus quam id leo in vitae turpis massa. Leo in vitae turpis massa.
-    Turpis cursus in hac habitasse platea. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Nec dui nunc
-    mattis enim ut tellus. Odio tempor orci dapibus ultrices in iaculis. Purus viverra accumsan in nisl nisi scelerisque
-    eu ultrices vitae. Faucibus interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Porttitor massa id
-    neque aliquam vestibulum morbi. Consequat nisl vel pretium lectus quam id leo in.
-    </p>
-    <p>
-        <span class="blue biggerText CenturyGothic"><b>S</b></span>it amet nulla facilisi morbi tempus. Turpis massa sed elementum tempus egestas. Pretium lectus quam id leo in vitae
-    turpis massa sed. Sit amet consectetur adipiscing elit. Amet facilisis magna etiam tempor orci eu lobortis
-    elementum. Ut faucibus pulvinar elementum integer enim. Consectetur lorem donec massa sapien. Magna eget est lorem
-    ipsum dolor sit. Vel eros donec ac odio tempor orci dapibus ultrices. Arcu felis bibendum ut tristique et egestas
-    quis ipsum. Morbi enim nunc faucibus a pellentesque sit amet porttitor eget. Turpis massa sed elementum tempus
-    egestas sed sed risus. Tortor consequat id porta nibh venenatis. Nibh nisl condimentum id venenatis a condimentum.
-    </p>
-</div>
+<div class="container">
 
+    <div class="row">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32">
+                    <use xlink:href="#bootstrap"/>
+                </svg>
+                <span class="fs-4">My First Bootstrap Site</span>
+            </a>
+
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+            </ul>
+        </header>
+
+    </div>
+    <div class="row border border-primary mb-3">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a class="btn btn-primary" href="#" role="button">Learn more!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Optional JavaScript; choose one of the two! -->
+
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+<!-- Option 2: Separate Popper and Bootstrap JS -->
+<!--
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+-->
+<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
